# ligoogle

./: LICENSE  PKG-INFO  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codecov.yml  codeql.yml  coveralls.yml  python-package.yml
src/ligoogle/: __main__.py  app_google.py  google.py
src/ligoogle.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
